src/components/Button.css
button.cc-button {
    --cc-button-bg-color: var(--cc-color-bg-light);
    --cc-button-color: var(--cc-color-text-normal);

    display: flex;
    align-items: center;

    overflow: hidden;
    margin: 3px;
    padding: 0.3em;
    cursor: pointer;
    font-weight: bold;
    font-size: unset;
    
    min-width: 0.5em;
    min-height: 0.5em;

    border-radius: var(--cc-border-radius-small);
    border: 1px solid var(--cc-button-bg-color);
    background-color: var(--cc-button-bg-color);
    color: var(--cc-button-color);
}

.cc-button.disabled {
    cursor: default;
    opacity: 0.3;
}

/* state */
.cc-button:focus {
    box-shadow: 0 1px 3px #8a9ba8;
    outline: 0;
}
.cc-button:not(.disabled):hover {
    box-shadow: 0 1px 3px #8a9ba8;
}
.cc-button:not(.disabled):active {
    box-shadow: 0 1px 3px #5c7080;
}


/* intent */
.cc-button.primary {
    --cc-button-bg-color: var(--cc-color-primary);
    --cc-button-color: #fff;
}

.cc-button.success {
    --cc-button-bg-color: var(--cc-color-success);
    --cc-button-color: #fff;
}

.cc-button.danger {
    --cc-button-bg-color: var(--cc-color-danger);
    --cc-button-color: #fff;
}

/* icon */
.cc-button > .cc-button-icon > svg:not([fill]) {
    fill: var(--cc-button-color)
}

/* label */
.cc-button > .cc-button-label {
    margin-right: 0.3em;
    margin-left: 0.3em;
}

